# talaria-rs

./: .envrc  Cargo.toml  README.md  build.rs
etc/: test.yaml
protos/: talaria_rs.proto
src/: main.rs  memtable.rs  schema.rs  table.rs  talaria_rs.rs  timeseries.rs
src/schema/proto/: schema.rs
src/server/: handlers.rs
src/writer/buffer/: mod.rs
